// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render App404 with gb locale correctly 1`] = `
<div
  className="font-regular font-non-jp"
>
  <p>
    cook-with-love-404-text-1
  </p>
</div>
`;

exports[`should render App404 with jp locale correctly 1`] = `
<div
  className="font-regular font-jp"
>
  <p>
    cook-with-love-404-text-1
  </p>
</div>
`;
